[gd_scene load_steps=5 format=3 uid="uid://c1506hhdfvgdi"]

[ext_resource type="PackedScene" uid="uid://bwv1hf7b5avj3" path="res://tower.tscn" id="1_6mupr"]
[ext_resource type="Script" path="res://test/test-projectile.gd" id="1_uajk2"]
[ext_resource type="PackedScene" uid="uid://dy8hxfaug3ufp" path="res://unit.tscn" id="2_wa0pg"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_p4htr"]
vertices = PackedVector2Array(891, 449, -120, 457, -118, -49, 886, -55)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-128, -59, 896, -66, 902, 459, -131, 468)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uajk2")

[node name="Tower" parent="." instance=ExtResource("1_6mupr")]
position = Vector2(400, 211)
state = 2
max_charges = 4
recharge_cooldown_val = 2.0
attack_cooldown_val = 1.0
attack_strength = 1.0

[node name="Unit" parent="." instance=ExtResource("2_wa0pg")]
position = Vector2(669, 311)
pid = "A"
attack_strength = 1.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(402, 287)
offset = Vector2(10, -100)
zoom = Vector2(2, 2)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.184314)
position = Vector2(59, -12)
navigation_polygon = SubResource("NavigationPolygon_p4htr")

[node name="Marker1" type="Marker2D" parent="."]
position = Vector2(478, 147)

[node name="Marker2" type="Marker2D" parent="."]
position = Vector2(175, 21)

[node name="Marker3" type="Marker2D" parent="."]
position = Vector2(191, 413)

[node name="Marker4" type="Marker2D" parent="."]
position = Vector2(708, 354)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
